[gd_scene load_steps=2 format=2]

[ext_resource path="res://Map_Menu/Maps.gd" type="Script" id=1]

[node name="Maps_Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonBack" type="Button" parent="."]
margin_left = 26.9391
margin_top = 25.8166
margin_right = 68.9391
margin_bottom = 45.8166
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 215.0
margin_top = 80.0
margin_right = 835.0
margin_bottom = 580.0
rect_min_size = Vector2( 600, 500 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 608.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 500 )

[node name="LoadContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 554.0
margin_bottom = 500.0
rect_min_size = Vector2( 50, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 558.0
margin_right = 608.0
margin_bottom = 500.0
rect_min_size = Vector2( 50, 500 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
